MAINT: suggested improvements to 2.1

--- a/02-Categorical-Data/2.1 Analyzing One Categorical Variable.ipynb
+++ b/02-Categorical-Data/2.1 Analyzing One Categorical Variable.ipynb
@@ -659,7 +659,7 @@
         "colab_type": "text"
       },
       "source": [
-        "1\\. What proportion of crew members were male? Express your answer using probability notation. How does this proportion differ from the proportion that was calculated in the lesson?"
+        "1\\. Calculate the proportion of crew members who were male, and write a comment in your code that describes this quantity using probability notation (e.g., `# P(A|B)`). How does this proportion differ from the proportion calculated at the beginning of the \"Conditional Probabilities\" section above?"
       ]
     },
     {
@@ -669,7 +669,7 @@
         "colab_type": "text"
       },
       "source": [
-        "2\\. What is the distribution of gender among passengers on the Titanic? What is the distribution of gender among passengers on the Titanic who survived? Express your answers using probability notation."
+        "2\\. What is the distribution of gender among passengers on the Titanic? What is the distribution of gender among passengers on the Titanic who survived? Include comments that describe these quantities using probability notation."
       ]
     },
     {
@@ -689,7 +689,7 @@
         "colab_type": "text"
       },
       "source": [
-        "3\\. Make a visualization of the distribution of drinking status."
+        "3\\. Make a visualization (bar chart, for now) of the distribution of drinking status."
       ]
     },
     {
@@ -699,7 +699,7 @@
         "colab_type": "text"
       },
       "source": [
-        "4\\. Create a new variable that indicates whether the user has, likes, or dislikes cats. Visualize the distribution of this variable."
+        "4\\. Create a new variable that indicates whether the user has, likes, or dislikes cats (ignoring users who did not provide information about cats). Visualize the distribution of this variable."
       ]
     },
     {
