MAINT: suggested improvements to 2.2

--- a/02-Categorical-Data/2.2 Two Categorical Variables and Cross-Tabulations.ipynb
+++ b/02-Categorical-Data/2.2 Two Categorical Variables and Cross-Tabulations.ipynb
@@ -157,9 +157,9 @@
       "source": [
         "Notice that the four probabilities in this table add up to 1.0. Each of these probabilities is called a joint probability and can be notated, for example, as \n",
         "\n",
-        "$$ P(\\text{female}, \\text{died}) = 0.058903.$$\n",
+        "$$ P(\\text{female}, \\text{died}) = 0.058903,$$\n",
         "\n",
-        "Collectively, these probabilities make up the _joint distribution_ of the variables **survived** and **gender**."
+        "where the $,$ is read as \"and\". Collectively, these probabilities make up the _joint distribution_ of the variables **survived** and **gender**."
       ]
     },
     {
@@ -378,7 +378,7 @@
         "How is it possible to divide a two-dimensional object by a one-dimensional object? Only if we _broadcast_ the one-dimensional object over the other dimension. A toy example is illustrated below.\n",
         "\n",
         "\\begin{align}\n",
-        "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ 5 & 6 \\end{bmatrix} \\Big/ \\begin{bmatrix} 7 \\\\ 8 \\end{bmatrix} &= \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ 5 & 6 \\end{bmatrix}  \\Big/ \\begin{bmatrix} 7 & 8 \\\\ 7 & 8 \\\\ 7 & 8 \\end{bmatrix} \\\\\n",
+        "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ 5 & 6 \\end{bmatrix} \\Big/ \\begin{bmatrix} 7 & 8 \\end{bmatrix} &= \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\\\ 5 & 6 \\end{bmatrix}  \\Big/ \\begin{bmatrix} 7 & 8 \\\\ 7 & 8 \\\\ 7 & 8 \\end{bmatrix} \\\\\n",
         "&= \\begin{bmatrix} 1/7 & 2/8 \\\\ 3/7 & 4/8 \\\\ 5/7 & 6/8 \\end{bmatrix}\n",
         "\\end{align}\n",
         "\n",
@@ -584,7 +584,7 @@
         "colab_type": "text"
       },
       "source": [
-        "6\\. Does there appear to be a relationship between death penalty verdicts and the defendant's race? If so, in what direction?"
+        "6\\. Does there appear to be a relationship between death penalty verdicts and the defendant's race? If so, in what direction? *Note: even conditional probabilities can be misleading when there are other variables involved. We'll investigate this further in the next chapter...*"
       ]
     }
   ]
