MAINT: suggested improvements to 2.3

--- a/02-Categorical-Data/2_3_Multi_Way_Tables_and_Simpson's_Paradox.ipynb
+++ b/02-Categorical-Data/2_3_Multi_Way_Tables_and_Simpson's_Paradox.ipynb
@@ -199,11 +199,11 @@
         "colab_type": "text"
       },
       "source": [
-        "Of course, we would have chosen any two of the variables to place along the rows, or had the two variables along the columns instead of the rows. The particular representation above was chosen because it makes it easy to survival rates for each gender and type, i.e.,\n",
+        "Of course, we would have chosen any two of the variables to place along the rows, or had the two variables along the columns instead of the rows. The particular representation above was chosen because it makes it easy to compute survival rates for each gender and type, i.e.,\n",
         "$$ P(\\text{survived} | \\textbf{gender}, \\textbf{type}), $$\n",
         "where **gender** is either \"male\" or \"female\" and **type** is either \"crew\" or \"passenger\". Recall that the conditional probability is calculated as \n",
         "$$ P(\\text{survived} | \\textbf{gender}, \\textbf{type}) = \\frac{P(\\text{survived}, \\textbf{gender}, \\textbf{type})}{P(\\textbf{gender}, \\textbf{type})}. $$\n",
-        "The numerator is the joint distribution above. The denominator can be calculated by summing over the possible values of **survived**---in other words, across each row, over the columns. "
+        "The numerator is the joint distribution above. The denominator can be calculated by summing for all possible values of **survived**---in other words, over each row. "
       ]
     },
     {
@@ -359,9 +359,9 @@
         "\n",
         "Likewise, if we look at the survival rates for passengers:\n",
         "\n",
-        "- The survival rate for female crew is 72.7%.\n",
-        "- The survival rate for male crew is 18.9%.\n",
-        "- The overall survival rate for all crew is 38.0%, which is closer to the middle of the gender-specific survival rates.\n",
+        "- The survival rate for female passengers is 72.7%.\n",
+        "- The survival rate for male passengers is 18.9%.\n",
+        "- The overall survival rate for all passengers is 38.0%, which is closer to the middle of the gender-specific survival rates.\n",
         "\n",
         "Why would the survival rate for crew members be so close to the survival rate for male crew? To answer this question, let's examine the weights that go into this weighted average."
       ]
@@ -412,7 +412,7 @@
       "source": [
         "Notice that 97.4% of crew members were male! So the lower male survival rate is going to dominate the weighted average when we calculate the overall survival rate for crew members. On the other hand, the gender ratio for passengers was more balanced, so their overall survival rate will end up being closer to the middle of the male and female survival rates.\n",
         "\n",
-        "Now, we calculate the weighted average, using the conditional distribution of gender as \"weights\" that we multiply by the survival rates. Then, we sum over the genders to get the weighted averages---i.e., the overall survival rates."
+        "Now, we calculate the weighted average, using the conditional distribution of gender as \"weights\" that we multiply by the survival rates. Then, we sum for all genders to get the weighted averages---i.e., the overall survival rates."
       ]
     },
     {
