MAINT: suggested improvements to 3.1

--- a/03-Quantitative-Data/3_1_Simple_Analyses_of_Quantitative_Variables.ipynb
+++ b/03-Quantitative-Data/3_1_Simple_Analyses_of_Quantitative_Variables.ipynb
@@ -338,16 +338,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aurIyQ2v8xBB",
-        "colab_type": "text"
-      },
-      "source": [
-        "Some passengers boarded the Titanic for free, apparently."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1fQpqJu68-0C",
         "colab_type": "text"
       },
@@ -436,29 +426,6 @@
         "\n",
         "The `.abs()` function in Step 2 is an example of a _vectorized_ function. The absolute value function is applied to each element of the `Series`."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eOG7qaXL-ApP",
-        "colab_type": "text"
-      },
-      "source": [
-        "The MAD is actually built into `pandas`, so there really is no reason to implement it from scratch, as we did above. Let's check that we get the same answer when we call the built-in function."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "s6xoX1ra91IZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df_titanic.fare.mad()"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -968,7 +935,7 @@
         "colab_type": "text"
       },
       "source": [
-        "6\\. Recall from the previous chapter that _bar charts_ are used to visualize categorical variables. What happens when you call `.plot.bar()` on a quantitative variable, like `tip`? Why does it look this way? Do you think bar charts are appropriate for quantitative variables?"
+        "6\\. Recall from the previous chapter that _bar charts_ are used to visualize categorical variables. What happens when you use `.plot.bar()` to visualize a quantitative variable, like `tip`? Why does it look this way? Do you think bar charts are appropriate for quantitative variables?"
       ]
     }
   ]
