MAINT: suggested improvements to 3.4

--- a/03-Quantitative-Data/3.4 Relationships Between Quantitative and Categorical Variables.ipynb
+++ b/03-Quantitative-Data/3.4 Relationships Between Quantitative and Categorical Variables.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# 3.4 Relationships Between Quantitative and Categorical Variables\n",
         "\n",
-        "In this section, we discuss ways to visualize the relationship between a categorical variable, like the building type of a home, and a quanitative variable, like the sale price."
+        "In this section, we discuss ways to visualize the relationship between a categorical variable, like the building type of a home, and a quantitative variable, like the sale price."
       ]
     },
     {
@@ -163,7 +163,7 @@
         "colab": {}
       },
       "source": [
-        "mean_sale_price = pd.Series()\n",
+        "mean_sale_price = pd.Series(dtype=float)\n",
         "\n",
         "for bldg_type in df_ames[\"Bldg Type\"].unique():\n",
         "    mean_sale_price[bldg_type] = df_ames[df_ames[\"Bldg Type\"] == bldg_type][\"SalePrice\"].mean()\n",
