MAINT: suggested improvements to 3.5

--- a/03-Quantitative-Data/3.5 Beyond Two Variables.ipynb
+++ b/03-Quantitative-Data/3.5 Beyond Two Variables.ipynb
@@ -238,7 +238,7 @@
         "colab": {}
       },
       "source": [
-        "from altair import *"
+        "from altair import Chart"
       ],
       "execution_count": 0,
       "outputs": []
@@ -254,7 +254,7 @@
         "\n",
         "Every Altair command starts with `Chart(your_data_frame)`, followed by the two main elements of the graphic:\n",
         "- the mark (i.e., the geometric object being plotted, which for a scatterplot, is a circle)\n",
-        "- the encoding channels (i.e., mappings between properties and variables). For a complete list of supported channels, see [here](https://altair-viz.github.io/user_guide/encoding.html)."
+        "- the encoding channels (i.e., mappings between properties and variables). For a complete list of supported channels, see [here](https://altair-viz.github.io/user_guide/encodings/channels.html)."
       ]
     },
     {
@@ -360,6 +360,7 @@
         "colab": {}
       },
       "source": [
+	    "from altair import X, Y, Scale, Axis\n",
         "Chart(df_housing).mark_circle().encode(\n",
         "    x=X(\"Gr Liv Area\", scale=Scale(domain=(0, 4000))),\n",
         "    y=Y(\"SalePrice\", axis=Axis(format=\"e\")),\n",
