MAINT: suggested improvements to 3.6

--- a/03-Quantitative-Data/3.6 Converting Categorical Variables to Quantitative Variables.ipynb
+++ b/03-Quantitative-Data/3.6 Converting Categorical Variables to Quantitative Variables.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pass all variables to get_dummies, dropping ones that are \"other\" types\n",
+    "# Pass all variables to get_dummies except ones that are \"other\" types\n",
     "df_titanic_quant = pd.get_dummies(\n",
     "    df_titanic.drop([\"name\", \"ticketno\"], axis=1)\n",
     ")\n",
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3\\. Suppose you convert the **Neighborhood** and **Bldg Type** variables to quantitative variables. How many new quantitative variables will you have? What is the value of the sum across each row of these new quantitative variables?"
+    "3\\. Suppose you convert both the **Neighborhood** and **Bldg Type** variables to quantitative variables. How many new quantitative variables will you have now? What is the value of the sum across each row of these new quantitative variables?"
    ]
   }
  ],
