MAINT: suggested improvements for 3.7

--- a/03-Quantitative-Data/3.7 Distance Metrics.ipynb
+++ b/03-Quantitative-Data/3.7 Distance Metrics.ipynb
@@ -86,7 +86,7 @@
         "\n",
         "![](https://github.com/dlsun/pods/blob/master/03-Quantitative-Data/distance.png?raw=1)\n",
         "\n",
-        "Calculating the distance between two points is not as straightforward as it might seem because there is more than one way to define distance. The most familiar distance metric is probably _Euclidan distance_, which is the straight-line distance (\"as the crow flies\") between the two points. The formula for calculating this distance is a generalization of the Pythagorean theorem:\n",
+        "Calculating the distance between two points is not as straightforward as it might seem because there is more than one way to define distance. The most familiar distance metric is probably _Euclidean distance_, which is the straight-line distance (\"as the crow flies\") between the two points. The formula for calculating this distance is a generalization of the Pythagorean theorem:\n",
         "\n",
         "$$ d({\\bf x}, {\\bf x'}) = \\sqrt{\\sum_{j=1}^D (x_j - x'_j)^2} $$"
       ]
@@ -304,7 +304,7 @@
       "source": [
         "Notice that the resulting `DataFrame` contains negative values. This makes sense because standardizing makes the mean of every variable equal to 0. If the mean is 0, then some values must be negative.\n",
         "\n",
-        "The above command is deceptively simple. We actually subtracted a `DataFrame` by a `Series`, then divided the resulting `DataFrame` by another `Series`. We relied on `pandas` to broadcast each `Series` over the right dimension of the `DataFrame`. To be more explicit about the broadcasting, we could have also used the `.sub()` and `.divide()` methods (instead of `-` and `/`) and been explicit about the axis:"
+        "The above command is deceptively simple. We actually subtracted a `Series` from a `DataFrame`, then divided the resulting `DataFrame` by another `Series`. We relied on `pandas` to broadcast each `Series` over the right dimension of the `DataFrame`. To be more explicit about the broadcasting, we could have also used the `.sub()` and `.divide()` methods (instead of `-` and `/`) and been explicit about the axis:"
       ]
     },
     {
@@ -402,7 +402,7 @@
         "2. Next, we \"fit\" the scaler to data. For example, in the case of standardization, this simply calculates and stores the mean and standard deviation to use for standardization.\n",
         "3. Finally, we transform the data. This actually applies the scaling to the data.\n",
         "\n",
-        "To standardize data, we use the `StandardScaler`. There is also a `MinMaxScaler` for min-max scaling and a `Normalizer` for normalization (but scikit-learn's `Normalizer` normalizes the rows to be length 1, rather than the columns). See [here](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.preprocessing) for a complete list of scalers and other preprocessing functions."
+        "To standardize data, we use the `StandardScaler`, and there is also a `MinMaxScaler` for min-max scaling. (Unfortunately, the `Normalizer` scaler normalizes the *rows* to be length 1, rather than the columns, so we use the `normalize` function with parameter `axis=0` instead.) See [here](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.preprocessing) for a complete list of scalers and other preprocessing functions."
       ]
     },
     {
@@ -431,7 +431,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Notice that scikit-learn returns the standardized data as a plain `numpy` array, rather than a `pandas` `DataFrame`. This is one disadvantage of using scikit-learn; we lose the column names, the row index, and all of the other metadata that `DataFrame`s contain."
+        "Notice that scikit-learn returns the standardized data as a plain `numpy` array, rather than a `pandas` `DataFrame`. To ensure that the scaler returns a `DataFrame`, we use its `set_output` method."
       ]
     },
     {
